# EnvironmentCheck

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  build.gradle  settings.gradle
.github/workflows/: android.yml  codacy.yml
AndroidInfo/: CheckHook.md  android_info.sh
CheckEnv/: build.gradle  hash-library.gradle
CheckEnv/src/androidTest/java/com/mgg/checkenv/: ExampleInstrumentedTest.kt
CheckEnv/src/main/: AndroidManifest.xml
CheckEnv/src/main/cpp/: CMakeLists.txt  base64.cc  base64.h  check_cpu.cpp  check_debug.cpp  check_device_uuid.cpp  check_env.cpp  check_hook.cpp  check_multi_open.cpp  check_root.cpp  check_sign.cpp  common.cpp  common.h  eintr_wrapper.h  hex_codec.cc  hex_codec.h  jni_base64.cpp  jni_string.hpp  linux_syscall_support.h  macros.h  magisk_detector.cpp  mobile_info.cpp  mobile_info.h  string_conversion.h
CheckEnv/src/main/cpp/synchronization/: count_down_latch.cc  count_down_latch.h  semaphore.cc  semaphore.h  shared_mutex_std.cc  sync_switch.h  waitable_event.h
CheckEnv/src/main/cpp/timer/: chrono_timestamp_provider.cc  chrono_timestamp_provider.h  time_delta.h  time_point.cc  time_point.h
CheckEnv/src/main/java/com/mgg/checkenv/: CheckEnv.kt  CheckMobEnvInitializer.kt  ContextProvider.java
CheckEnv/src/main/java/com/mgg/checkenv/callback/: EmulatorCheckCallback.kt
CheckEnv/src/main/java/com/mgg/checkenv/cpu/: CheckCpu.kt  CpuBean.kt  CpuInfo.kt
CheckEnv/src/main/java/com/mgg/checkenv/debug/: CheckDebug.kt  DebugBean.kt  DebugInfo.kt
CheckEnv/src/main/java/com/mgg/checkenv/emulator/: CheckEmulator.kt
CheckEnv/src/main/java/com/mgg/checkenv/harmony/: HarmonyOsUtil.kt
CheckEnv/src/main/java/com/mgg/checkenv/hook/: CheckHook.kt  HookBean.kt  HookInfo.kt
CheckEnv/src/main/java/com/mgg/checkenv/internal/: Handlers.kt  Timing.kt
CheckEnv/src/main/java/com/mgg/checkenv/magisk/: MagiskDetector.kt
CheckEnv/src/main/java/com/mgg/checkenv/module/: BaseBean.kt  BaseData.kt  CommandResult.java  EmulatorCheckResult.kt
CheckEnv/src/main/java/com/mgg/checkenv/monkey/: CheckMonkey.kt
CheckEnv/src/main/java/com/mgg/checkenv/multiopen/: CheckMultiOpen.kt  MoreOpenBean.kt  MoreOpenInfo.kt
CheckEnv/src/main/java/com/mgg/checkenv/rom/: RomUtils.java  (+1 more)
CheckEnv/src/test/java/com/mgg/checkenv/: ExampleUnitTest.kt
Core/: build.gradle
Core/src/androidTest/java/com/mgg/core/: ExampleInstrumentedTest.java
Core/src/main/: AndroidManifest.xml
Core/src/main/java/com/mgg/core/: CoreApplication.kt
Core/src/test/java/com/mgg/core/: ExampleUnitTest.java
KotlinExtensions/: build.gradle
KotlinExtensions/src/androidTest/java/com/mgg/kotlinextensions/: ExampleInstrumentedTest.kt
KotlinExtensions/src/main/: AndroidManifest.xml
KotlinExtensions/src/test/java/com/mgg/kotlinextensions/: ExampleUnitTest.kt
app/: .gitignore  build.gradle  double-conversion.gradle  flatbuffers.gradle
app/src/androidTest/java/com/mgg/environmentcheck/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ArchTaskExecutor.cpp  ArchTaskExecutor.h  CMakeLists.txt  DefaultTaskExecutor.cpp  DefaultTaskExecutor.h  MainViewModel.cpp  MainViewModel.h  NativeObjectReference.cpp  QtJniNativeViewModel.cpp  TaskExecutor.h  ViewModel.cpp  ViewModel.h  ascii_trie.cc  ascii_trie.h  base32.cc  base32.h  closure.h  concurrent_message_loop.cc  concurrent_message_loop.h  curl_api.cc  curl_api.h  delayed_task.cc  delayed_task.h  eintr_wrapper.h  format.sh  hex_codec.cc  http.cpp  jni_double_conversion.cpp  jni_string.hpp  library_loader.cc  log_settings.h  log_utils.h  logging.cc  logging.h  make_copyable.h  message_loop.cc  message_loop.h  message_loop_impl.cc  message_loop_impl.h  message_loop_task_queues.cc  (+31 more)
app/src/main/cpp/abseil-cpp/: CMakeLists.txt
app/src/main/cpp/android/: jni_util.cc  jni_util.h  jni_weak_ref.cc  jni_weak_ref.h  message_loop_android.cc  message_loop_android.h  scheduler.hpp  scoped_java_ref.cc  scoped_java_ref.h
app/src/main/cpp/double-conversion/: CMakeLists.txt
app/src/main/cpp/flatbuffers/: CMakeLists.txt
app/src/main/cpp/internal/: type_traits.h
app/src/main/cpp/linux/: timerfd.cc  timerfd.h
app/src/main/cpp/log/: log_level.h  log_settings.cc  log_settings_state.cc  logging.h
app/src/main/cpp/memory/: atomic.h  ref_counted.h  ref_counted_internal.h  ref_ptr.h  ref_ptr_internal.h  shared_ptr.h  task_runner_checker.cc  task_runner_checker.h  thread_checker.h  unique_ptr.h  weak_ptr.h  weak_ptr_internal.cc  weak_ptr_internal.h
app/src/main/cpp/meta/: move.h
app/src/main/cpp/snappy/: CMakeLists.txt
app/src/main/cpp/synchronization/: atomic_object.h  semaphore.cc  shared_mutex.h  shared_mutex_std.h  sync_switch.cc  waitable_event.cc
app/src/main/cpp/timer/: chrono_timestamp_provider.h  timestamp_provider.h
app/src/main/cpp/util/: any.hpp
app/src/main/fbs/: loading_view.fbs  main_viewmodel.fbs  toast.fbs
app/src/main/java/com/mgg/environmentcheck/: App.kt  BindNativeSetPropFunctionAnnotation.kt  DoubleConversion.java  FinalizerRunnable.java  MVVMView.kt  MainActivity.kt  MainViewModel.kt  MethodsAnnotated.java  NativeContext.java  NativeObject.java  NativeObjectReference.java  QtNative.java  QtNativeViewModel.java  QtNativeViewModel.kt  QtThread.java  Snappy.java  SnappyError.java  SnappyErrorCode.java  SnappyLoader.java  SnappyNative.java  SystemServices.kt  TestActivity.kt  TestAdapter.kt  TestItemViewModel.java  TestView.kt  TestViewHolder.kt
app/src/main/java/strategy/: Strategy.kt
app/src/main/res/layout/: activity_main.xml  activity_test.xml  item_letter.xml  layout_letter.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mgg/environmentcheck/: ExampleUnitTest.kt
config/: git-version.gradle  maven-publish.gradle
gen-libs/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
hidden-api/: build.gradle
hidden-api/src/main/java/android/net/: INetworkPolicyListener.java  INetworkPolicyManager.java  NetworkPolicyManager.java  Uri.java
hidden-api/src/main/java/misc/utils/: HiddenUtil.java
(+38 files in other folders)
